--- a/mmpfn/prod.ipynb
+++ b/mmpfn/prod.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "591adb16",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "6cc38de2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('data/prod/Train.csv')"
+    "train = pd.read_csv('data/pawpularity/train.csv')\n",
+    "test = pd.read_csv('data/pawpularity/test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d0a99a22",
    "metadata": {},
    "outputs": [
@@ -47,47 +48,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Text_ID</th>\n",
-       "      <th>Product_Description</th>\n",
-       "      <th>Product_Type</th>\n",
-       "      <th>Sentiment</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Subject Focus</th>\n",
+       "      <th>Eyes</th>\n",
+       "      <th>Face</th>\n",
+       "      <th>Near</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Accessory</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Collage</th>\n",
+       "      <th>Human</th>\n",
+       "      <th>Occlusion</th>\n",
+       "      <th>Info</th>\n",
+       "      <th>Blur</th>\n",
+       "      <th>Pawpularity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3057</td>\n",
-       "      <td>The Web DesignerÛªs Guide to iOS (and Android...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0007de18844b0dbbb5e1f607da0606e0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6254</td>\n",
-       "      <td>RT @mention Line for iPad 2 is longer today th...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0009c66b9439883ba2750fb825e1d7db</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8212</td>\n",
-       "      <td>Crazy that Apple is opening a temporary store ...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0013fd999caf9a3efe1352ca1b0d937e</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4422</td>\n",
-       "      <td>The lesson from Google One Pass: In this digit...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0018df346ac9c1d8413cfcc888ca8246</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5526</td>\n",
-       "      <td>RT @mention At the panel: &amp;quot;Your mom has a...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>001dc955e10590d3ca4673f034feeef2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -95,78 +156,151 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6359</th>\n",
-       "      <td>2945</td>\n",
-       "      <td>Thanks @mention for hosting this event #sxsw #...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6360</th>\n",
-       "      <td>4528</td>\n",
-       "      <td>SXSW iPhone app is awesome, but iPad app crash...</td>\n",
-       "      <td>7</td>\n",
+       "      <th>9907</th>\n",
+       "      <td>ffbfa0383c34dc513c95560d6e1fdb57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6361</th>\n",
-       "      <td>6526</td>\n",
-       "      <td>RT @mention RT @mention Download 20+ free trac...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <th>9908</th>\n",
+       "      <td>ffcc8532d76436fc79e50eb2e5238e45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6362</th>\n",
-       "      <td>2110</td>\n",
-       "      <td>OH at Texas Social Media Awards: 'You don't ne...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <th>9909</th>\n",
+       "      <td>ffdf2e8673a1da6fb80342fa3b119a20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6363</th>\n",
-       "      <td>2177</td>\n",
-       "      <td>#Google launching a &amp;quot;major&amp;quot; new soci...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <th>9910</th>\n",
+       "      <td>fff19e2ce11718548fa1c5d039a5192a</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9911</th>\n",
+       "      <td>fff8e47c766799c9e12f3cb3d66ad228</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6364 rows × 4 columns</p>\n",
+       "<p>9912 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Text_ID                                Product_Description  \\\n",
-       "0        3057  The Web DesignerÛªs Guide to iOS (and Android...   \n",
-       "1        6254  RT @mention Line for iPad 2 is longer today th...   \n",
-       "2        8212  Crazy that Apple is opening a temporary store ...   \n",
-       "3        4422  The lesson from Google One Pass: In this digit...   \n",
-       "4        5526  RT @mention At the panel: &quot;Your mom has a...   \n",
-       "...       ...                                                ...   \n",
-       "6359     2945  Thanks @mention for hosting this event #sxsw #...   \n",
-       "6360     4528  SXSW iPhone app is awesome, but iPad app crash...   \n",
-       "6361     6526  RT @mention RT @mention Download 20+ free trac...   \n",
-       "6362     2110  OH at Texas Social Media Awards: 'You don't ne...   \n",
-       "6363     2177  #Google launching a &quot;major&quot; new soci...   \n",
+       "                                    Id  Subject Focus  Eyes  Face  Near  \\\n",
+       "0     0007de18844b0dbbb5e1f607da0606e0              0     1     1     1   \n",
+       "1     0009c66b9439883ba2750fb825e1d7db              0     1     1     0   \n",
+       "2     0013fd999caf9a3efe1352ca1b0d937e              0     1     1     1   \n",
+       "3     0018df346ac9c1d8413cfcc888ca8246              0     1     1     1   \n",
+       "4     001dc955e10590d3ca4673f034feeef2              0     0     0     1   \n",
+       "...                                ...            ...   ...   ...   ...   \n",
+       "9907  ffbfa0383c34dc513c95560d6e1fdb57              0     0     0     1   \n",
+       "9908  ffcc8532d76436fc79e50eb2e5238e45              0     1     1     1   \n",
+       "9909  ffdf2e8673a1da6fb80342fa3b119a20              0     1     1     1   \n",
+       "9910  fff19e2ce11718548fa1c5d039a5192a              0     1     1     1   \n",
+       "9911  fff8e47c766799c9e12f3cb3d66ad228              0     1     1     1   \n",
        "\n",
-       "      Product_Type  Sentiment  \n",
-       "0                9          2  \n",
-       "1                9          2  \n",
-       "2                9          2  \n",
-       "3                9          2  \n",
-       "4                9          2  \n",
-       "...            ...        ...  \n",
-       "6359             9          2  \n",
-       "6360             7          1  \n",
-       "6361             9          2  \n",
-       "6362             9          2  \n",
-       "6363             9          2  \n",
+       "      Action  Accessory  Group  Collage  Human  Occlusion  Info  Blur  \\\n",
+       "0          0          0      1        0      0          0     0     0   \n",
+       "1          0          0      0        0      0          0     0     0   \n",
+       "2          0          0      0        0      1          1     0     0   \n",
+       "3          0          0      0        0      0          0     0     0   \n",
+       "4          0          0      1        0      0          0     0     0   \n",
+       "...      ...        ...    ...      ...    ...        ...   ...   ...   \n",
+       "9907       0          0      0        0      0          0     0     1   \n",
+       "9908       0          0      0        0      0          0     0     0   \n",
+       "9909       0          0      0        0      1          1     0     0   \n",
+       "9910       0          0      0        0      1          0     0     0   \n",
+       "9911       0          0      0        0      0          0     0     0   \n",
        "\n",
-       "[6364 rows x 4 columns]"
+       "      Pawpularity  \n",
+       "0              63  \n",
+       "1              42  \n",
+       "2              28  \n",
+       "3              15  \n",
+       "4              72  \n",
+       "...           ...  \n",
+       "9907           15  \n",
+       "9908           70  \n",
+       "9909           20  \n",
+       "9910           20  \n",
+       "9911           30  \n",
+       "\n",
+       "[9912 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,23 +311,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "cdaaf480",
+   "execution_count": null,
+   "id": "b99f2697",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 2, 2, ..., 2, 2, 2], shape=(6364,))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train['Sentiment'].values"
+    "for col in train.columns:\n",
+    "    print(col, train[col].nunique(), '/', train.shape)"
    ]
   }
  ],
