--- a/mmpfn/run_salary_multimodal.ipynb
+++ b/mmpfn/run_salary_multimodal.ipynb
@@ -37,7 +37,7 @@
     "from mmpfn.models.mmpfn_v2 import MMPFNClassifier\n",
     "from mmpfn.models.mmpfn_v2.constants import ModelInterfaceConfig\n",
     "from mmpfn.models.mmpfn_v2.preprocessing import PreprocessorConfig\n",
-    "from mmpfn.scripts_finetune_mm.finetune_tabpfn_main import fine_tune_tabpfn"
+    "from mmpfn.scripts_finetune_mm.finetune_tabpfn_main import fine_tune_mmpfn"
    ]
   },
   {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "15dce1ac",
    "metadata": {},
    "outputs": [
@@ -81,101 +81,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fine-tuning Steps:   4%|▍         | 4/100 [00:24<12:00,  7.51s/it, Best Val. Loss=1.33, Best Val. Score=-1.33, Training Loss=1.3, Val. Loss=1.33, Patience=47, Utilization=0, Grad Norm=1.95] [2025-09-09 12:59:58,510] INFO - \n",
+      "Fine-tuning Steps:   5%|▌         | 5/100 [00:25<10:12,  6.44s/it, Best Val. Loss=1.32, Best Val. Score=-1.32, Training Loss=1.29, Val. Loss=1.32, Patience=46, Utilization=0, Grad Norm=1.74][2025-09-12 22:25:49,189] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  99%|█████████▉| 99/100 [10:27<00:06,  6.36s/it, Best Val. Loss=1.3, Best Val. Score=-1.3, Training Loss=1.24, Val. Loss=1.3, Patience=-47, Utilization=0, Grad Norm=2.12]  [2025-09-09 13:10:01,867] INFO - \n",
+      "Fine-tuning Steps:  68%|██████▊   | 68/100 [07:08<03:24,  6.39s/it, Best Val. Loss=1.28, Best Val. Score=-1.28, Training Loss=1.22, Val. Loss=1.28, Patience=-16, Utilization=0, Grad Norm=2.8] [2025-09-12 22:32:31,928] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [10:38,  6.39s/it, Best Val. Loss=1.3, Best Val. Score=-1.3, Training Loss=1.26, Val. Loss=1.3, Patience=-48, Utilization=0, Grad Norm=2.74]                         \n",
-      "[2025-09-09 13:10:08,256] INFO - Initial Validation Loss: 1.3392215386815003 Best Validation Loss: 1.2976129167651838 Total Steps: 101 Best Step: 100 Total Time Spent: 642.3699605464935\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/mmpfn_v2/classifier.py:400: UserWarning: Number of samples 15841 is greater than the maximum Number of samples 10000 supported by the model. You may see degraded performance.\n",
-      "  X, y, feature_names_in, n_features_in = validate_Xy_fit(\n"
+      "Fine-tuning Steps: 101it [10:36,  6.37s/it, Best Val. Loss=1.27, Best Val. Score=-1.27, Training Loss=1.23, Val. Loss=1.27, Patience=-48, Utilization=0, Grad Norm=2.73]                         \n",
+      "[2025-09-12 22:35:55,012] INFO - Initial Validation Loss: 1.3418467534958098 Best Validation Loss: 1.2667475888432054 Total Steps: 101 Best Step: 100 Total Time Spent: 639.3922448158264\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.437263317344105\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   6%|▌         | 6/100 [00:31<09:59,  6.37s/it, Best Val. Loss=1.31, Best Val. Score=-1.31, Training Loss=1.31, Val. Loss=1.31, Patience=45, Utilization=0, Grad Norm=1.83][2025-09-09 13:10:55,810] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  84%|████████▍ | 84/100 [08:45<01:41,  6.33s/it, Best Val. Loss=1.29, Best Val. Score=-1.29, Training Loss=1.26, Val. Loss=1.29, Patience=-32, Utilization=0, Grad Norm=2.41][2025-09-09 13:19:09,463] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [10:31,  6.32s/it, Best Val. Loss=1.29, Best Val. Score=-1.29, Training Loss=1.26, Val. Loss=1.29, Patience=-48, Utilization=0, Grad Norm=3.07]                         \n",
-      "[2025-09-09 13:20:50,738] INFO - Initial Validation Loss: 1.336951353706309 Best Validation Loss: 1.2883711138380742 Total Steps: 101 Best Step: 100 Total Time Spent: 633.393468618393\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/mmpfn_v2/classifier.py:400: UserWarning: Number of samples 15841 is greater than the maximum Number of samples 10000 supported by the model. You may see degraded performance.\n",
-      "  X, y, feature_names_in, n_features_in = validate_Xy_fit(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.42085331986872004\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:  14%|█▍        | 14/100 [01:23<09:08,  6.38s/it, Best Val. Loss=1.31, Best Val. Score=-1.31, Training Loss=1.29, Val. Loss=1.31, Patience=37, Utilization=0, Grad Norm=1.7] [2025-09-09 13:22:28,374] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [10:35,  6.35s/it, Best Val. Loss=1.3, Best Val. Score=-1.3, Training Loss=1.25, Val. Loss=1.3, Patience=-49, Utilization=0, Grad Norm=2.19]                          \n",
-      "[2025-09-09 13:31:35,460] INFO - Initial Validation Loss: 1.3286779900335302 Best Validation Loss: 1.2963168058377652 Total Steps: 101 Best Step: 100 Total Time Spent: 636.6358184814453\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/mmpfn_v2/classifier.py:400: UserWarning: Number of samples 15841 is greater than the maximum Number of samples 10000 supported by the model. You may see degraded performance.\n",
-      "  X, y, feature_names_in, n_features_in = validate_Xy_fit(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.4236303963645544\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   6%|▌         | 6/100 [00:31<10:00,  6.38s/it, Best Val. Loss=1.33, Best Val. Score=-1.33, Training Loss=1.3, Val. Loss=1.33, Patience=45, Utilization=0, Grad Norm=1.47] [2025-09-09 13:32:21,861] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [10:36,  6.36s/it, Best Val. Loss=1.3, Best Val. Score=-1.3, Training Loss=1.29, Val. Loss=1.3, Patience=-49, Utilization=0, Grad Norm=2]                              \n",
-      "[2025-09-09 13:42:21,052] INFO - Initial Validation Loss: 1.3438833303457924 Best Validation Loss: 1.3039206347959382 Total Steps: 101 Best Step: 97 Total Time Spent: 637.6108298301697\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/mmpfn_v2/classifier.py:400: UserWarning: Number of samples 15841 is greater than the maximum Number of samples 10000 supported by the model. You may see degraded performance.\n",
-      "  X, y, feature_names_in, n_features_in = validate_Xy_fit(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.41327947488008077\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   7%|▋         | 7/100 [00:38<09:54,  6.39s/it, Best Val. Loss=1.3, Best Val. Score=-1.3, Training Loss=1.33, Val. Loss=1.3, Patience=44, Utilization=0, Grad Norm=1.55]   [2025-09-09 13:43:13,967] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  64%|██████▍   | 64/100 [06:47<03:58,  6.61s/it, Best Val. Loss=1.27, Best Val. Score=-1.27, Training Loss=1.29, Val. Loss=1.27, Patience=-12, Utilization=0, Grad Norm=1.98][2025-09-09 13:49:22,870] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [10:43,  6.43s/it, Best Val. Loss=1.27, Best Val. Score=-1.27, Training Loss=1.27, Val. Loss=1.27, Patience=-48, Utilization=0, Grad Norm=1.92]                         \n",
-      "[2025-09-09 13:53:13,803] INFO - Initial Validation Loss: 1.3207194438352474 Best Validation Loss: 1.2697563579597513 Total Steps: 101 Best Step: 99 Total Time Spent: 644.7358176708221\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/mmpfn_v2/classifier.py:400: UserWarning: Number of samples 15841 is greater than the maximum Number of samples 10000 supported by the model. You may see degraded performance.\n",
-      "  X, y, feature_names_in, n_features_in = validate_Xy_fit(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.4329714718505428\n"
+     "ename": "TypeError",
+     "evalue": "MMPFNClassifier.__init__() missing 2 required keyword-only arguments: 'mgm_heads' and 'cqam_heads'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 57\u001b[0m\n\u001b[1;32m     51\u001b[0m no_preprocessing_inference_config \u001b[38;5;241m=\u001b[39m ModelInterfaceConfig(\n\u001b[1;32m     52\u001b[0m     FINGERPRINT_FEATURE\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m     53\u001b[0m     PREPROCESS_TRANSFORMS\u001b[38;5;241m=\u001b[39m[PreprocessorConfig(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnone\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n\u001b[1;32m     54\u001b[0m )\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Evaluate on Test Data\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m model_finetuned \u001b[38;5;241m=\u001b[39m \u001b[43mMMPFNClassifier\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     58\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msave_path_to_fine_tuned_model\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[43m    \u001b[49m\u001b[43minference_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mno_preprocessing_inference_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     60\u001b[0m \u001b[43m    \u001b[49m\u001b[43mignore_pretraining_limits\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     61\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmixer_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMGM\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# MGM MGM+CQAM\u001b[39;49;00m\n\u001b[1;32m     62\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m clf_finetuned \u001b[38;5;241m=\u001b[39m model_finetuned\u001b[38;5;241m.\u001b[39mfit(X_train, text_train, y_train)\n\u001b[1;32m     65\u001b[0m acc_score \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, clf_finetuned\u001b[38;5;241m.\u001b[39mpredict(X_test, text_test))\n",
+      "\u001b[0;31mTypeError\u001b[0m: MMPFNClassifier.__init__() missing 2 required keyword-only arguments: 'mgm_heads' and 'cqam_heads'"
      ]
     }
    ],
@@ -192,8 +114,8 @@
     "    y_train = train_dataset.dataset.y[train_dataset.indices]\n",
     "    X_test = test_dataset.dataset.x[test_dataset.indices]\n",
     "    y_test = test_dataset.dataset.y[test_dataset.indices]\n",
-    "    text_train = train_dataset.dataset.embeddings[train_dataset.indices].unsqueeze(1)\n",
-    "    text_test = test_dataset.dataset.embeddings[test_dataset.indices].unsqueeze(1)\n",
+    "    text_train = train_dataset.dataset.embeddings[train_dataset.indices]\n",
+    "    text_test = test_dataset.dataset.embeddings[test_dataset.indices]\n",
     "        \n",
     "    for i in range(X_train.shape[1]):\n",
     "        col = X_train[:, i]\n",
@@ -206,7 +128,7 @@
     "\n",
     "    save_path_to_fine_tuned_model = \"./finetuned_mmpfn_airbnb.ckpt\"\n",
     "\n",
-    "    fine_tune_tabpfn(\n",
+    "    fine_tune_mmpfn(\n",
     "        # path_to_base_model=\"auto\",\n",
     "        save_path_to_fine_tuned_model=save_path_to_fine_tuned_model,\n",
     "        # Finetuning HPs\n",
@@ -224,7 +146,9 @@
     "        show_training_curve=False,  # Shows a final report after finetuning.\n",
     "        logger_level=0,  # Shows all logs, higher values shows less\n",
     "        freeze_input=True,  # Freeze the input layers (encoder and y_encoder) during finetuning\n",
-    "        mixer_type='MGM' # MGM MGM+CQAM\n",
+    "        mixer_type='MGM', # MGM MGM+CQAM\n",
+    "        mgm_heads=4,\n",
+    "        cqam_heads=4,\n",
     "    )\n",
     "\n",
     "    # disables preprocessing at inference time to match fine-tuning\n",
@@ -238,7 +162,9 @@
     "        model_path=save_path_to_fine_tuned_model,\n",
     "        inference_config=no_preprocessing_inference_config,\n",
     "        ignore_pretraining_limits=True,\n",
-    "        mixer_type='MGM' # MGM MGM+CQAM\n",
+    "        mixer_type='MGM', # MGM MGM+CQAM\n",
+    "        mgm_heads=4,\n",
+    "        cqam_heads=4,\n",
     "    )\n",
     "\n",
     "    clf_finetuned = model_finetuned.fit(X_train, text_train, y_train)\n",
@@ -249,69 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f5de1d9e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3,)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "50089a10",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 768])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_train[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bb959b7f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15841\n",
-      "15841\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(X_train))\n",
-    "print(len(text_train))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0f99d1c5",
    "metadata": {},
    "outputs": [
