--- a/mmpfn/run_salary_multimodal.ipynb
+++ b/mmpfn/run_salary_multimodal.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7cb31173",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wall/anaconda3/envs/mmpfn/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/swiglu_ffn.py:51: UserWarning: xFormers is not available (SwiGLU)\n",
-      "  warnings.warn(\"xFormers is not available (SwiGLU)\")\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/attention.py:33: UserWarning: xFormers is not available (Attention)\n",
-      "  warnings.warn(\"xFormers is not available (Attention)\")\n",
-      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/block.py:40: UserWarning: xFormers is not available (Block)\n",
-      "  warnings.warn(\"xFormers is not available (Block)\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import annotations\n",
     "\n",
@@ -42,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cb73c353",
    "metadata": {},
    "outputs": [],
@@ -53,18 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6a312084",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Load embeddings from embeddings/salary/salary.pt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_path = os.path.join(os.getenv('HOME'), \"works/research/MultiModalPFN/mmpfn/data/salary\")\n",
     "dataset = SalaryDataset(data_path)\n",
@@ -76,34 +53,10 @@
    "execution_count": null,
    "id": "15dce1ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   5%|▌         | 5/100 [00:25<10:12,  6.44s/it, Best Val. Loss=1.32, Best Val. Score=-1.32, Training Loss=1.29, Val. Loss=1.32, Patience=46, Utilization=0, Grad Norm=1.74][2025-09-12 22:25:49,189] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  68%|██████▊   | 68/100 [07:08<03:24,  6.39s/it, Best Val. Loss=1.28, Best Val. Score=-1.28, Training Loss=1.22, Val. Loss=1.28, Patience=-16, Utilization=0, Grad Norm=2.8] [2025-09-12 22:32:31,928] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [10:36,  6.37s/it, Best Val. Loss=1.27, Best Val. Score=-1.27, Training Loss=1.23, Val. Loss=1.27, Patience=-48, Utilization=0, Grad Norm=2.73]                         \n",
-      "[2025-09-12 22:35:55,012] INFO - Initial Validation Loss: 1.3418467534958098 Best Validation Loss: 1.2667475888432054 Total Steps: 101 Best Step: 100 Total Time Spent: 639.3922448158264\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "MMPFNClassifier.__init__() missing 2 required keyword-only arguments: 'mgm_heads' and 'cqam_heads'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 57\u001b[0m\n\u001b[1;32m     51\u001b[0m no_preprocessing_inference_config \u001b[38;5;241m=\u001b[39m ModelInterfaceConfig(\n\u001b[1;32m     52\u001b[0m     FINGERPRINT_FEATURE\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m     53\u001b[0m     PREPROCESS_TRANSFORMS\u001b[38;5;241m=\u001b[39m[PreprocessorConfig(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnone\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n\u001b[1;32m     54\u001b[0m )\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Evaluate on Test Data\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m model_finetuned \u001b[38;5;241m=\u001b[39m \u001b[43mMMPFNClassifier\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     58\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msave_path_to_fine_tuned_model\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[43m    \u001b[49m\u001b[43minference_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mno_preprocessing_inference_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     60\u001b[0m \u001b[43m    \u001b[49m\u001b[43mignore_pretraining_limits\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     61\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmixer_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMGM\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# MGM MGM+CQAM\u001b[39;49;00m\n\u001b[1;32m     62\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m clf_finetuned \u001b[38;5;241m=\u001b[39m model_finetuned\u001b[38;5;241m.\u001b[39mfit(X_train, text_train, y_train)\n\u001b[1;32m     65\u001b[0m acc_score \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, clf_finetuned\u001b[38;5;241m.\u001b[39mpredict(X_test, text_test))\n",
-      "\u001b[0;31mTypeError\u001b[0m: MMPFNClassifier.__init__() missing 2 required keyword-only arguments: 'mgm_heads' and 'cqam_heads'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy_scores = []\n",
-    "for seed in range(5):\n",
+    "for seed in range(1):\n",
     "    torch.manual_seed(seed)\n",
     "    train_len = int(len(dataset) * 0.8)\n",
     "    test_len = len(dataset) - train_len\n",
@@ -126,7 +79,7 @@
     "\n",
     "    torch.cuda.empty_cache()\n",
     "\n",
-    "    save_path_to_fine_tuned_model = \"./finetuned_mmpfn_airbnb.ckpt\"\n",
+    "    save_path_to_fine_tuned_model = \"./finetuned_mmpfn_salary.ckpt\"\n",
     "\n",
     "    fine_tune_mmpfn(\n",
     "        # path_to_base_model=\"auto\",\n",
@@ -146,8 +99,8 @@
     "        show_training_curve=False,  # Shows a final report after finetuning.\n",
     "        logger_level=0,  # Shows all logs, higher values shows less\n",
     "        freeze_input=True,  # Freeze the input layers (encoder and y_encoder) during finetuning\n",
-    "        mixer_type='MGM', # MGM MGM+CQAM\n",
-    "        mgm_heads=4,\n",
+    "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
+    "        mgm_heads=32,\n",
     "        cqam_heads=4,\n",
     "    )\n",
     "\n",
@@ -162,8 +115,8 @@
     "        model_path=save_path_to_fine_tuned_model,\n",
     "        inference_config=no_preprocessing_inference_config,\n",
     "        ignore_pretraining_limits=True,\n",
-    "        mixer_type='MGM', # MGM MGM+CQAM\n",
-    "        mgm_heads=4,\n",
+    "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
+    "        mgm_heads=32,\n",
     "        cqam_heads=4,\n",
     "    )\n",
     "\n",
@@ -178,16 +131,7 @@
    "execution_count": null,
    "id": "0f99d1c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Accuracy: 0.4255995960616006\n",
-      "Std Accuracy: 0.00858576983009472\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get mean and std of accuracy scores\n",
     "mean_accuracy = np.mean(accuracy_scores)\n",
